--- a/assets/Pages/index.html
+++ b/assets/Pages/index.html
@@ -251,13 +251,13 @@
     </div>
     
     <!-- Scripts -->
-    <script src="./assets/js/data/foodDatabase.js"></script>
-    <script src="./assets/js/utils/dateUtils.js"></script>
-    <script src="./assets/js/utils/calculators.js"></script>
-    <script src="./assets/js/modules/waterTracker.js"></script>
-    <script src="./assets/js/modules/foodTracker.js"></script>
-    <script src="./assets/js/modules/modalHandler.js"></script>
-    <script src="./assets/js/modules/dashboard.js"></script>
-    <script src="./assets/js/main.js"></script>
+    <script src="./assets/Scripts/data/foodDatabase.js"></script>
+    <script src="./assets/Scripts/dateUtils.js"></script>
+    <script src="./assets/Scripts/calculators.js"></script>
+    <script src="./assets/Scripts/waterTracker.js"></script>
+    <script src="./assets/Scripts/foodTracker.js"></script>
+    <script src="./assets/Scripts/modalHandler.js"></script>
+    <script src="./assets/Scripts/dashboard.js"></script>
+    <script src="./assets/Scripts/main.js"></script>
 </body>
 </html>
