--- a/assets/Pages/index.html
+++ b/assets/Pages/index.html
@@ -14,9 +14,9 @@
                 <div class="logo">FitTrack</div>
                 <ul class="nav-links">
                     <li><a href="index.html" class="active">Dashboard</a></li>
-                    <li><a href="assets/pages/food.html">Food</a></li>
-                    <li><a href="assets/pages/progress.html">Progress</a></li>
-                    <li><a href="assets/pages/goals.html">Goals</a></li>
+                    <li><a href="assets/Pages/food.html">Food</a></li>
+                    <li><a href="assets/Pages/progress.html">Progress</a></li>
+                    <li><a href="assets/Pages/goals.html">Goals</a></li>
                 </ul>
             </nav>
         </div>
