--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 <div class="logo">FitTrack</div>
                 <ul class="nav-links">
                     <li><a href="index.html" class="active">Dashboard</a></li>
-                    <li><a href="pages/food.html">Food</a></li>
-                    <li><a href="pages/progress.html">Progress</a></li>
-                    <li><a href="pages/goals.html">Goals</a></li>
+                    <li><a href="Pages/food.html">Food</a></li>
+                    <li><a href="Pages/progress.html">Progress</a></li>
+                    <li><a href="Pages/goals.html">Goals</a></li>
                 </ul>
             </nav>
         </div>
